update personal info and publications

--- a/_bibliography/publications.bib
+++ b/_bibliography/publications.bib
@@ -3,15 +3,16 @@
 References
 ==========
 
-@misc{https://doi.org/10.48550/arxiv.2206.09960,
-	title        = {A Fast Algorithm for Ranking Users by their Influence in Online Social Platforms},
+@inproceedings{arhachoui:hal-03700079,
+	title        = {{A Fast Algorithm for Ranking Users by their Influence in Online Social Platforms}},
 	author       = {Arhachoui, Nouamane and Bautista, Esteban and Danisch, Maximilien and Giovanidis, Anastasios},
 	year         = 2022,
-	publisher    = {arXiv},
-	doi          = {10.48550/ARXIV.2206.09960},
-	url          = {https://arxiv.org/abs/2206.09960},
-	copyright    = {Creative Commons Attribution 4.0 International},
-	keywords     = {Networking and Internet Architecture (cs.NI), Social and Information Networks (cs.SI), FOS: Computer and information sciences, FOS: Computer and information sciences},
-	bibtex_show  = true,
-	preprint     = true
+	month        = Nov,
+	booktitle    = {{The 2022 IEEE/ACM International Conference on Advances in Social Networks Analysis and Mining (ASONAM)}},
+	address      = {Istanbul, Turkey},
+	url          = {https://hal.archives-ouvertes.fr/hal-03700079},
+	keywords     = {Social Networks ; Influence ; Algorithms ; Scalability ; PageRank},
+	pdf          = {https://arxiv.org/pdf/2206.09960.pdf},
+	hal_id       = {hal-03700079},
+	bibtex_show	 = true
 }
