update the publications and projects

--- a/_bibliography/publications.bib
+++ b/_bibliography/publications.bib
@@ -3,16 +3,30 @@
 References
 ==========
 
-@inproceedings{arhachoui:hal-03700079,
-	title        = {{A Fast Algorithm for Ranking Users by their Influence in Online Social Platforms}},
-	author       = {Arhachoui, Nouamane and Bautista, Esteban and Danisch, Maximilien and Giovanidis, Anastasios},
-	year         = 2022,
-	month        = Nov,
-	booktitle    = {{The 2022 IEEE/ACM International Conference on Advances in Social Networks Analysis and Mining (ASONAM)}},
-	address      = {Istanbul, Turkey},
-	url          = {https://hal.archives-ouvertes.fr/hal-03700079},
-	keywords     = {Social Networks ; Influence ; Algorithms ; Scalability ; PageRank},
-	pdf          = {https://arxiv.org/pdf/2206.09960.pdf},
-	hal_id       = {hal-03700079},
-	bibtex_show	 = true
+@inproceedings{10068673,
+  author      = {Arhachoui, Nouamane and Bautista, Esteban and Danisch, Maximilien and Giovanidis, Anastasios},
+  booktitle   = {2022 IEEE/ACM International Conference on Advances in Social Networks Analysis and Mining (ASONAM)},
+  title       = {A Fast Algorithm for Ranking Users by their Influence in Online Social Platforms},
+  year        = {2022},
+  volume      = {},
+  number      = {},
+  pages       = {526-533},
+  doi         = {10.1109/ASONAM55673.2022.10068673},
+  pdf         = {https://arxiv.org/pdf/2206.09960.pdf},
+  bibtex_show = true
+}
+@unpublished{arhachoui:hal-04317506,
+  title       = {{Scalable Algorithms to Measure User Influence in Social Networks}},
+  author      = {Arhachoui, Nouamane and Bautista, Esteban and Danisch, Maximilien and Giovanidis, Anastasios and Tabourier, Lionel},
+  url         = {https://hal.science/hal-04317506},
+  note        = {working paper or preprint},
+  year        = {2023},
+  month       = Nov,
+  keywords    = {Social Networks ; PsiScore ; Ranking ; Algorithms ; Influence},
+  pdf         = {https://hal.science/hal-04317506/file/LNSN-3169.pdf},
+  hal_id      = {hal-04317506},
+  hal_version = {v1},
+  bibtex_show = true,
+  preprint    = true,
+  comment     = {Accepted at Lecture Notes in Social Networks, Springer}
 }
